created all header

--- a/englisch.html
+++ b/englisch.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
-<html lang="ENG">
+<html lang="de">
+
+
 <head>
-<meta charaset="UTF-8">
-<title> Alena Vodopianova </title>
-<link rel="stylesheet" type="text/css" href="SV.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alena Vodopianova</title>
+    <link rel="stylesheet" type="text/css" href="SV.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="translation-note">
-        <span><a href="index.html">DE</a></span> | <span><a href = "englisch.html">ENG</a></span>
-    </div>
-<header>
    
-<div class = "header1 img">
-    <img src="photo/Alena 5.jpg" alt="Alena Vodopianova">
-    <div class="header1">
-        <h1>Alena <br>
-             Vodopianova</h1>
-    </div>    
 
-</header>
+    <header>
+        <div class="header-content">
+            <div class="photo-info-container">
+                <div class="photo-container">
+                    <img src="photo/Alena 5.jpg" alt="Alena Vodopianova" class="profile-photo">
+                </div>
+            </div>
+            <div class="header-text">
+                <div class="translation-note">
+                    <span><a href="index.html">DE</a></span> | <span><a href="englisch.html">ENG</a></span>
+                </div>
+                <h1>Alena <br> Vodopianova</h1>
+                <h3>Mobile Software Development</h3>
+                <div class="info">
+                    <p class="data">26.03.1997</p>
+                    <p><img src="photo/phone.png" alt="Phone Icon"> +43 681 10 20 1900</p>
+                    <p><img src="photo/email.png" alt="Email Icon"> alonsoy75@gmail.com</p>
+                    <p><img src="photo/address.png" alt="Location Icon"> Metahofgasse 6/27, 8020 Graz</p>
+               
+                </div>
+                
+            </div>
+        </div>
+    </header>
 
-
+    <main>
+        <section class="profile">
+            <h2>Profile</h2>
+            <p>Ich bin eine zielstrebige Person mit einem unstillbaren Wissensdurst und einer Leidenschaft für Programmierung...</p>
+        </section>
+    </main>
 </body>
 </html>
