--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-    <div class="translation-note">
-        <span><a href="index.html">DE</a></span> | <span><a href="englisch.html">ENG</a></span>
-    </div>
+   
 
     <header>
         <div class="header-content">
@@ -23,14 +21,19 @@
                 </div>
             </div>
             <div class="header-text">
+                <div class="translation-note">
+                    <span><a href="index.html">DE</a></span> | <span><a href="englisch.html">ENG</a></span>
+                </div>
                 <h1>Alena <br> Vodopianova</h1>
                 <h3>Mobile Software Development</h3>
                 <div class="info">
-                    <p>26.03.1997</p>
-                    <p><img src="icons/phone.png" alt="Phone Icon"> +43 681 10 20 1900</p>
-                    <p><img src="icons/email.png" alt="Email Icon"> alonsoy75@gmail.com</p>
-                    <p><img src="icons/location.png" alt="Location Icon"> Metahofgasse 6/27, 8020 Graz</p>
+                    <p class="data">26.03.1997</p>
+                    <p><img src="photo/phone.png" alt="Phone Icon"> +43 681 10 20 1900</p>
+                    <p><img src="photo/email.png" alt="Email Icon"> alonsoy75@gmail.com</p>
+                    <p><img src="photo/address.png" alt="Location Icon"> Metahofgasse 6/27, 8020 Graz</p>
+               
                 </div>
+                
             </div>
         </div>
     </header>
