--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alena Vodopianova</title>
     <link rel="stylesheet" type="text/css" href="SV.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -27,7 +28,7 @@
                 <h1>Alena <br> Vodopianova</h1>
                 <h3>Mobile Software Development</h3>
                 <div class="info">
-                    <p class="data">26.03.1997</p>
+                    <p>26.03.1997</p>
                     <p><img src="photo/phone.png" alt="Phone Icon"> +43 681 10 20 1900</p>
                     <p><img src="photo/email.png" alt="Email Icon"> alonsoy75@gmail.com</p>
                     <p><img src="photo/address.png" alt="Location Icon"> Metahofgasse 6/27, 8020 Graz</p>
@@ -41,7 +42,12 @@
     <main>
         <section class="profile">
             <h2>Profile</h2>
-            <p>Ich bin eine zielstrebige Person mit einem unstillbaren Wissensdurst und einer Leidenschaft für Programmierung...</p>
+            <p>Ich bin eine zielstrebige Person mit einem unstillbaren
+                Wissensdurst und einer Leidenschaft für Programmierung. Neue
+                Aufgaben sehe ich als spannende Herausforderungen, die meine
+                Logik und Kreativität fördern. Mit großer Begeisterung widme ich
+                mich der Weiterentwicklung meiner Fähigkeiten und stecke stets
+                100 % meiner Energie in meine Arbeit.</p>
         </section>
     </main>
 </body>
