created main for study and profile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
     </header>
 
     <main>
-        <section class="profile">
+      <div class = "content">
+            <div class="study">
+                <h2> Ausbildung </h2>
+                 <h3>Bachelor </h3> 
+                 <h4>Mobile Software Development</h4>
+                 <h5>FH Joanneum</h5>
+                 <p>2024 - 2027</p>
+                 <h3>Mittlere berufliche Ausbildung</h3>
+                 <h4>Volksschullehrerin</h4>
+                 <h5>Pädagogisches Kolleg Donskoi
+                 (Russia)</h5>
+                 <p>2012 - 2016</p>
+                 </div>
+                 <div class="profile">
             <h2>Profile</h2>
             <p>Ich bin eine zielstrebige Person mit einem unstillbaren
                 Wissensdurst und einer Leidenschaft für Programmierung. Neue
@@ -51,7 +64,8 @@
                 Logik und Kreativität fördern. Mit großer Begeisterung widme ich
                 mich der Weiterentwicklung meiner Fähigkeiten und stecke stets
                 100 % meiner Energie in meine Arbeit.</p>
-        </section>
+            </div>
+        </div>
     </main>
 </body>
 
