created main for study and profile

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <div class = "content">
             <div class="study">
                 <h2> Ausbildung </h2>
-                 <h3>Bachelor </h3> 
-                 <h4>Mobile Software Development</h4>
+                 <h3>Bachelor 
+                 Mobile Software Development</h3> 
                  <h5>FH Joanneum</h5>
                  <p>2024 - 2027</p>
                  <h3>Mittlere berufliche Ausbildung</h3>
